--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         var canvas = document.querySelector("#unity-canvas");
         var loadingBar = document.querySelector("#unity-loading-bar");
         var progressBarFull = document.querySelector("#unity-progress-bar-full");
-
+        
         const firebaseConfig = {
             apiKey: "AIzaSyAnM9XARRvqmNmaUDMZRxQ6xW-4QCnNfmo",
             authDomain: "pokemon-cbb8e.firebaseapp.com",
@@ -361,7 +361,7 @@
             let backCams = [];
             let devices = await navigator.mediaDevices.enumerateDevices();
             devices.forEach(mediaDevice => {
-                if (mediaDevice.kind === 'videoinput') {  //&& !mediaDevice.label.includes('facing front')) {
+                if (mediaDevice.kind === 'videoinput' && !mediaDevice.label.includes('facing front')) {
                     backCams.push(mediaDevice);
                 }
             });
