--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         });;
         
     </script>
-    <script src="Build/debug.io.loader.js"></script>
+    <script src="Build/Builds.loader.js"></script>
     <script>
             var container = document.querySelector("#unity-container");
             var canvas = document.querySelector("#unity-canvas");
@@ -153,9 +153,9 @@
                 
                 document.getElementById("startARDiv").style.display = "none";
                 createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/debug.io.data",
-                    frameworkUrl: "Build/debug.io.framework.js",
-                    codeUrl: "Build/debug.io.wasm",
+                    dataUrl: "Build/Builds.data",
+                    frameworkUrl: "Build/Builds.framework.js",
+                    codeUrl: "Build/Builds.wasm",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "VRplus",
                     productName: "pokemon_ar",
