--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         });;
         
     </script>
-    <script src="Build/BuildsTest.loader.js"></script>
+    <script src="Build/debug.io.loader.js"></script>
     <script>
             var container = document.querySelector("#unity-container");
             var canvas = document.querySelector("#unity-canvas");
@@ -153,8 +153,8 @@
                 
                 document.getElementById("startARDiv").style.display = "none";
                 createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/81476f15b68f30712d1d302f20a52480.data",
-                    frameworkUrl: "Build/dadb6b935b062c8d2e42bc44fd5f3001.js",
+                    dataUrl: "Build/6f1784f784a055ae73b1a311d9292b29.data",
+                    frameworkUrl: "Build/3f4890238894ec9d66cc238d4cc73b34.js",
                     codeUrl: "Build/6526d4fed853d7b1f15deb8b2e5f45cc.wasm",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "VRplus",
