--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
                 
                 document.getElementById("startARDiv").style.display = "none";
                 createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/6f1784f784a055ae73b1a311d9292b29.data",
-                    frameworkUrl: "Build/3f4890238894ec9d66cc238d4cc73b34.js",
-                    codeUrl: "Build/6526d4fed853d7b1f15deb8b2e5f45cc.wasm",
+                    dataUrl: "Build/debug.io.data",
+                    frameworkUrl: "Build/debug.io.framework.js",
+                    codeUrl: "Build/debug.io.wasm",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "VRplus",
                     productName: "pokemon_ar",
