--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             right: 0;
             top: 0;
             bottom: 0;
-            background: #fffa;
+            background-image: url("https://cdn.discordapp.com/attachments/1156289847238066177/1163704869383835738/BG_0.png?ex=65408b9d&is=652e169d&hm=406a621c1aeec75f2a73b258b12217b8f67a8156d2698d858b08bd10a48f2b8f&");
+            background-position: center;
+            background-size: cover;
             z-index: 99;
         }
     </style>
@@ -103,7 +105,7 @@
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <div id="startARDiv" class="ctaDiv">
         <select id="chooseCamSel" style="display: none;" onchange="SelectCam()"></select>
-        <p style="text-align: center; width:60vw;">This augmented reality experience requires access to your device's
+        <p style="text-align: center; width:60vw; color: white;">This augmented reality experience requires access to your device's
             camera</p>
         <button id="startARButton" onclick="StartAR()" style="display:none">ALLOW ACCESS</button>
     </div>
@@ -123,7 +125,9 @@
         <p id="errorText" style="text-align: center; width:60vw; color:white"></p>
     </div>
     <div id="unity-container" class="unity-mobile">
-        <canvas id="unity-canvas" style="width: 100%; height: 100%; background: #0000; z-index: -99"></canvas>
+        <canvas id="unity-canvas" style="width: 100%; height: 100%; 
+        background-image: url('https://cdn.discordapp.com/attachments/1156289847238066177/1163704869383835738/BG_0.png?ex=65408b9d&is=652e169d&hm=406a621c1aeec75f2a73b258b12217b8f67a8156d2698d858b08bd10a48f2b8f&'); 
+        background-position: center; background-size: cover; z-index: -99"></canvas>
         <div id="unity-loading-bar">
             <div id="unity-logo"></div>
             <div id="unity-progress-bar-empty">
@@ -169,7 +173,7 @@
         };
         const app = firebase.initializeApp(firebaseConfig);
         const rest = app.firestore();
-        
+
         function StartAR() {
             canvas.style.width = window.innerWidth + "px";
             canvas.style.height = window.innerHeight + "px";
@@ -207,6 +211,8 @@
                 // };
                 // window.waitForVideo();
                 loadingBar.style.display = "none";
+                canvas.style.backgroundImage = '';
+                canvas.style.background = "#0000";
             });
             loadingBar.style.display = "block";
         }
