--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport"
         content='width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, user-scalable=no, shrink-to-fit=yes'>
-    <title>Unity WebGL Player | pokemon_ar</title>
+    <title>Đấu trường huyền thoại Nuvi</title>
     <link rel="stylesheet" href="TemplateData/style.css">
     <style>
         html {
@@ -105,9 +105,8 @@
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <div id="startARDiv" class="ctaDiv">
         <select id="chooseCamSel" style="display: none;" onchange="SelectCam()"></select>
-        <p style="text-align: center; width:60vw; color: white;">This augmented reality experience requires access to your device's
-            camera</p>
-        <button id="startARButton" onclick="StartAR()" style="display:none">ALLOW ACCESS</button>
+        <p style="text-align: center; width:60vw; color: white;">Trải nghiệm thực tế tăng cường này yêu cầu truy cập vào camera của thiết bị.</p>
+        <button id="startARButton" onclick="StartAR()" style="display:none">CHO PHÉP</button>
     </div>
     <div id="screenshotDiv" style="display: none;" class="ctaDiv">
         <div
