--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
     <script src="Build/Builds.loader.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.3.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.3.1/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.3.1/firebase-analytics-compat.js"></script>
     <script>
         var container = document.querySelector("#unity-container");
         var canvas = document.querySelector("#unity-canvas");
@@ -175,6 +176,7 @@
         };
         const app = firebase.initializeApp(firebaseConfig);
         const rest = app.firestore();
+        const analytics = app.analytics();
 
         function StartAR() {
             canvas.style.width = window.innerWidth + "px";
@@ -243,8 +245,8 @@
                 console.log("getUserMedia Error", err);
                 ShowError("Failed to start the experience. Camera permission was denied");
             }
-
         }
+        
         async function LoadWebcams() {
             let backCams = [];
             let devices = await navigator.mediaDevices.enumerateDevices();
