--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 'eventAction': action,
                 'eventLabel': label,
             });
-            console.log(str);
+            console.log("category: " + category + " action: " + action + " label: " + label);
         }
     </script>
 </body>
