--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
     <imagetarget id='YetTu-LV1' src='targets/YetTu-LV1.jpg'></imagetarget>
     <imagetarget id='YetTu-LV2' src='targets/YetTu-LV2.jpg'></imagetarget>
     <imagetarget id='YetTu-LV3' src='targets/YetTu-LV3.jpg'></imagetarget>
+    <imagetarget id='YetTu-LV3' src='targets/YetTu-LV3.jpg'></imagetarget>
+    <imagetarget id='TheDacBiet_1' src='targets/TheDacBiet_1.jpeg'></imagetarget>
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <div id="startARDiv" class="ctaDiv">
